src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Action_Date__c</fullName>
        <label>Action Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Budget_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Close_Comments__c</fullName>
        <label>Close Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Have you attached a contract to this Opportunity?</inlineHelpText>
        <label>Contract Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Dealmaker_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealmaker Opportunity</label>
        <referenceTo>DMAPP__DM_Opportunity_Extra__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>DM_Opportunity_Extra</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMSPM__SPM_Importance__c</fullName>
        <label>SPM Importance</label>
        <picklist>
            <picklistValues>
                <fullName>Must Win</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Develop</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DM_Assessment_Count__c</fullName>
        <label>DM Assessment Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discovery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Loss Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Lost to Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Budget / Lost Funding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Decision / Non-Responsive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lost_Reason__c</fullName>
        <label>Lost Reason</label>
        <picklist>
            <controllingField>StageName</controllingField>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution Fit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed Qualification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ROI_Analysis_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROI Analysis Completed</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <booleanFilter>(1 OR 2)</booleanFilter>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>CSO_SA_SysAdmin_Transfer_Ownership</fullName>
        <active>true</active>
        <description>Only CSO, Sales Admin and System Admin should be able to transfer ownership of opportunities.All other roles should not be able to transfer ownership of any opportunities.</description>
        <errorConditionFormula>AND(
ISCHANGED( OwnerId ),
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
$Profile.Name &lt;&gt; &quot;Chief Sales Officer&quot;,
$Profile.Name &lt;&gt; &quot;Sales Administrator&quot;)</errorConditionFormula>
        <errorMessage>Only CSO, Sales Admin and System Admin can transfer ownership of opportunities</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Close_Comments_entered_if_Other</fullName>
        <active>true</active>
        <description>Comments must be added in the &apos;Close Comments&apos; field if &apos;Other&apos; is selected as &apos;Close Reason&apos;.</description>
        <errorConditionFormula>AND(
 ISPICKVAL(Lost_Reason__c,&quot;Other&quot;),
 ISBLANK(Close_Comments__c )
)</errorConditionFormula>
        <errorDisplayField>Close_Comments__c</errorDisplayField>
        <errorMessage>Comments must be added in the &apos;Close Comments&apos; field if &apos;Other&apos; is selected as &apos;Close Reason&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Close_Reason_must_be_selected_if_Lost</fullName>
        <active>true</active>
        <description>A &apos;Close Reason&apos; must be selected if the Opportunity is set to Closed Lost.</description>
        <errorConditionFormula>AND(
 OR(
  ISPICKVAL(StageName,&quot;Closed - Lost&quot;),
  ISPICKVAL(StageName,&quot;Closed - Deferred&quot;)
    ),
 ISBLANK(TEXT(Lost_Reason__c))
)</errorConditionFormula>
        <errorDisplayField>Lost_Reason__c</errorDisplayField>
        <errorMessage>A &apos;Close Reason&apos; must be selected if the Opportunity is set to Closed Lost.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contract_Must_Be_Attached_if_Closed_Won</fullName>
        <active>true</active>
        <description>&apos;Contract Attached&apos; field must be checked for an Opportunity to be &apos;Closed - Won&apos;</description>
        <errorConditionFormula>AND(
 
 ISPICKVAL( StageName , &quot;Closed - Won&quot;),
 Contract_Attached__c = FALSE

)</errorConditionFormula>
        <errorDisplayField>Contract_Attached__c</errorDisplayField>
        <errorMessage>&apos;Contract Attached&apos; field must be checked for an Opportunity to be &apos;Closed - Won&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Opportunity_Qualification</fullName>
        <active>true</active>
        <description>TAS 1-20 Assessment has to be completed before setting to &quot;Qualified Opportunity&quot;.</description>
        <errorConditionFormula>AND(
OR(
 DM_Assessment_Count__c &lt; 20,
 ISBLANK(DM_Assessment_Count__c)
),
 ISPICKVAL(StageName , &quot;Qualified Opportunity&quot;)
)</errorConditionFormula>
        <errorMessage>TAS 1-20 Assessment has to be completed before setting to &apos;Qualified Opportunity&apos;.</errorMessage>
    </validationRules>
</CustomObject>